# myrtle

./: .gitignore  README.md  graph_microkernel_data.py  letsEstimate.sh  lets_gen.sh  letsgo.sh  main.py  myrtle.py  peek_at_snitch_assembly.py  pyproject.toml  quidditch_load_counting.py  requirements.txt  test_output-disp-7.json  tile_size_gen.py  tile_size_generator.py  tile_sizes_estimate_cycles.py  utils.py
estimated_cycles_no_overhead/: dispatch_1_case1_everything.csv  dispatch_1_case2_everything.csv  dispatch_7_case1_everything.csv  dispatch_7_case2_everything.csv  dispatch_8_case1_everything.csv  dispatch_8_case2_everything.csv
estimated_cycles_out/: dispatch_1_case1_everything.csv  dispatch_1_case2_everything.csv  dispatch_7_case1_everything.csv  dispatch_7_case2_everything.csv  dispatch_8_case1_everything.csv  dispatch_8_case2_everything.csv
estimated_cycles_out_2/: dispatch_1_case1_everything.csv  dispatch_1_case2_everything.csv  dispatch_7_case1_everything.csv  dispatch_7_case2_everything.csv  dispatch_8_case1_everything.csv  dispatch_8_case2_everything.csv
graphing/: graph_dispatches-everything-works-someday-delete.py  graph_dispatches.py  graph_dispatches2-someday-delete.py  graph_dispatches2.py  graph_utils.py  graph_w_estimated_timing.py  graphing-refactored.py  motivation_l1i_br.py  svm-test.py  ts-request.txt
myrtle/: myrtle.py  peek_at_snitch_assembly.py  quidditch_load_counting.py  tile_size_generator.py  utils.py
myrtle_tile_size_gen_out/: dispatch_1_case1_searchSpace.csv  dispatch_1_case2_searchSpace.csv  dispatch_1_case3_searchSpace.csv
(+94 files in other folders)
