[project]
name = "myrtle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "xdsl[docs]==0.31.0",
    "PyQt6",
    "marimo==0.13.11",
    "scikit-learn==1.7.0"
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.1",
]
