[project]
name = "myrtle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.1.2",
    "pandas==2.2.2",
    "xdsl==0.21.0",
    "PyQt6",
    "scikit-learn==1.7.0"
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.1",
    "marimo==0.13.11"
]
